# dns-server

./: .ansible-lint  .dockerignore  .env.auth  .env.gateway  .env.jobs  .env.shared  .env.sites  .gitignore  Cargo.toml  Makefile  README-ops.md  README.md  ansible.cfg  build.rs  docker-compose.yml  go.work  go.work.sum  login.json  query_packet.txt  requirements-ansible.txt
.github/workflows/: ansible.yml  frontend.yml  go.yml  rust.yml
.sourcecraft/: ci.yaml  pipeline.yaml  pipeline.yml
aezacheck-ui/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
aezacheck-ui/src/: App.tsx  index.css
aezacheck-ui/src/components/: AgentDashboard.tsx  CheckSheet.tsx  GooglyShapes.tsx  Map2D.tsx  MapGlobe.tsx  QuickCheckCard.tsx
aezacheck-ui/src/hooks/: useMapData.ts
aezacheck-ui/src/lib/: api.ts
aezacheck-ui/tests/: setup.ts
dev/api-gw/: Dockerfile  go.mod  go.sum  main.go
dev/auth-svc/: Dockerfile  go.mod  go.sum  main.go
dev/dns-agent/: Dockerfile  dns-agent.env  secrets.env.example
dev/jobs-svc/: Dockerfile  go.mod  go.sum  main.go  main_test.go
dev/sites-svc/: Dockerfile  go.mod  main.go
docs/: ci_cd.md  code.md  control-plane-api.md  control-plane-deploy.md  control-plane-openapi.yaml  control-plane-review.md  overview.md  runbook.md
group_vars/: all.yml  api_gw.yml  auth_svc.yml  dns_agents.yml  jobs_svc.yml  sites_svc.yml
group_vars/all/: vault.yml.example
infra/: ansible.cfg  services.yml
infra/inventory/: hosts.yml
infra/migrations/: 0001_init.sql  0002_indices.sql
infra/systemd/: dns-agent-firewall.sh  dns-agent-healthcheck.sh  dns-agent-secrets.env.example  dns-agent.env  dns-agent.service
inventories/local/: hosts.yml
inventories/prod/: hosts.yml
playbooks/: site.yml
services/jobs-svc/: Dockerfile  go.mod  go.sum  main.go  main_test.go  migrate.go  popular_services.go  quick_checks.go
src/: dispatcher.rs  lease_extender.rs  lib.rs  main.rs  resolver.rs
src/concurrency/: mod.rs  persistence.rs
src/control_plane/: mod.rs
src/http/: error.rs  mod.rs
src/runtime/: io.rs  middleware.rs  migrations.rs  mod.rs  telemetry.rs  timer.rs
src/workers/: mod.rs  ping.rs  storage.rs  tcp.rs  trace.rs
tests/: agent_pipeline.rs  control_plane.rs  control_plane_api.rs  dispatcher.rs  resolver.rs  workers.rs
tests/support/: mod.rs
(+81 files in other folders)
