[package]
name = "codecrafters-dns-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
async-trait = "0.1"
bytes = "1.3.0"                                  # helps manage buffers
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.38"                             # error handling
tokio = { version = "1.38", features = ["macros", "net", "rt-multi-thread", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
hostname = "0.3"
metrics = "0.23"

[dev-dependencies]
futures = "0.3"
hdrhistogram = "7"
metrics = "0.23"
metrics-util = "0.15"
num_cpus = "1.16"
rand = "0.8"

[build-dependencies]
num_cpus = "1.16"
