[package]
name = "dns_agent"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
async-trait = "0.1"
bytes = "1.3.0"                                  # helps manage buffers
crossbeam-queue = "0.3"
futures = "0.3"
moka = { version = "0.12", features = ["future"] }
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.38"                             # error handling
tokio = { version = "1.38", features = ["io-util", "macros", "net", "rt-multi-thread", "time", "sync"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
hostname = "0.3"
metrics = "0.23"
socket2 = { version = "0.5", features = ["all"] }
rand = "0.8"
pnet_packet = "0.34"

[dev-dependencies]
futures = "0.3"
hdrhistogram = "7"
metrics = "0.23"
metrics-util = "0.15"
num_cpus = "1.16"

[build-dependencies]
num_cpus = "1.16"

[target.'cfg(unix)'.dependencies]
pnet_packet = "0.34"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper"] }
